--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,15 @@
 } */
 
 
+html {
+    background-image: url("../images/pexels-photo-452739.jpg");
+}
+.main-page-buttons {
+    padding: 50px;
+    padding-top: 200px;
+    font-weight: 500;
+    
+}
+a {
+    color:white;
+}
