--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,18 @@
     outline: 1px solid red;
 } */
 
-
 html {
-    background-image: url("../images/pexels-photo-452739.jpg");
+    background-image: url("../images/mainimg.png");
+    background-position: center;
+    background-repeat: none;
+    background-size: cover;
 }
-.main-page-buttons {
-    padding: 50px;
-    padding-top: 200px;
-    font-weight: 500;
-    
+
+.brand-logo {
+    margin-left: auto;
+    margin-right: auto;
 }
-a {
-    color:white;
+
+.btn-flat {
+    background-color: rgb(102, 212, 240);
 }
