--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ html {
     background-position: center;
     background-repeat: none;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .brand-logo {
@@ -18,6 +19,27 @@ html {
     background-color: rgb(102, 212, 240);
 }
 
-#dropdown1 li {
-    text-align: center;
+/* body select.select_box */ 
+body select { 
+    display: inline-block; 
+    padding: 10px 70px 10px 13px !important; 
+    max-width: 100%; 
+    height: auto !important; 
+    border: 1px solid #e3e3e3; 
+    border-radius: 3px; 
+    background: url("https://image.ibb.co/iMeAJv/selectbox_arrow.png") right center no-repeat; background-color: #fff; 
+    color: #444444; 
+    font-size: 12px; 
+    line-height: 16px !important; 
+    appearance: none; /* this is must */ 
+    -webkit-appearance: none; 
+    -moz-appearance: none; } /* body select.select_box option */ 
+
+.custom-select {
+    display: inline-block;
 }
+
+body select option { 
+    padding: 0 4px;
+} 
+
