--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-/* * {
+/*  * {
     outline: 1px solid red;
-} */
+}   */
 
 html {
     background-image: url("../images/mainimg.png");
@@ -29,7 +29,8 @@ body select {
     border-radius: 3px; 
     background: url("https://image.ibb.co/iMeAJv/selectbox_arrow.png") right center no-repeat; background-color: #fff; 
     color: #444444; 
-    font-size: 12px; 
+    font-size: 16px; 
+    font-weight: bolder;
     line-height: 16px !important; 
     appearance: none; /* this is must */ 
     -webkit-appearance: none; 
@@ -43,31 +44,27 @@ body select option {
     padding: 0 4px;
 } 
 
+
 #googlemapdiv {
     height: 100%;
-}
-#googlemapdiv {
     position: relative;
-    padding-bottom: 50%; /*This is the aspect ratio */
   
     /* overflow: hidden;*/
 }
 #googlemapdiv iframe {
-    position: absolute;
-    width: 100% !important;
-    height: 100% !important;
-    float: right;
+    width: 300px !important;
+    height: 300px !important;
     border: none;
 }
-
-
  
- 
-.image-fs  {
-     
-    float: left;
-    width: 100% !important;
-    height: 100% !important;
+.foursquare  {     
+    width: 100%;
+    height: 100%;
+}
+
+.image-fs {
+    max-width: 300px;
+    height: 300px;
 }
 
 #main-page-buttons {
@@ -76,5 +73,28 @@ body select option {
      
 }
 #images-wrapper {
- width: 100%;
+    width: 100%;
+}
+
+
+.tableinfo {
+    margin: 50px auto;
+}
+
+#tablediv {
+    background-color: white;
+    font-size: 18px;
+    font-weight: bolder;
+    justify-content: right;
+    opacity: 0.8;
+    border: 2px solid black;
+}
+
+#tablediv tr {
+    border: 1px solid black;
+}
+
+#tablediv tr td {
+    text-align: left;
+    padding: 20px;
 }
