--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,12 +53,12 @@ body select option {
     position: relative;
     margin-bottom: 50px;
     height: 100%;
-    padding-bottom: 50%; /*This is the aspect ratio */
+    padding-bottom: 100%; /*This is the aspect ratio */
   
     /* overflow: hidden;*/
 }
 #googlemapdiv iframe {
-    position: absolute;
+    position: relative;
     width: 100% !important;
     height: 100% !important;
     float: right;
@@ -75,7 +75,7 @@ body select option {
     float: left;
     width: 100% !important;
     height: 100% !important;
-    margin-bottom: 200px;
+    /* margin-bottom: 100px; */
     margin-top: 10px;
 }
 #submit-btn {
